2012-03-07  Minh Dao-Tran  <dao@kr.tuwien.ac.at>



	* include/mcs/NewBaseDispatcher.h: Fix bugs that are not detected in -O3 compiling mode.
	* include/mcs/NewBeliefState.h: Likewise.
	* src/dmcs/InputProvider.cpp: Likewise.
	* src/mcs/BridgeRuleEvaluator.cpp: Likewise.
	* src/mcs/NewBeliefState.cpp: Likewise.

	* include/mcs/ForwardMessage.h: query_id --> qid.
	* src/mcs/ForwardMessage.cpp: Likewise.
	* include/mcs/QueryID.h: Likewise.
	* src/mcs/NewContext.cpp: Likewise.
	* src/network/NewNeighborOut.cpp: Likewise.

	* include/mcs/BackwardMessage.h: Move the implementation of serialze() to header file.
	* src/mcs/BackwardMessage.cpp: Likewise.

2012-03-02  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* include/network/NewNeighborOut.h: New file.
	* src/network/NewNeighborOut.cpp: Likewise.

	* include/network/Makefile.am: Add NewNeighborOut.h.
	* src/network/Makefile.am: Add NewNeighborOut.cpp.

	* include/mcs/QueryID.h: Encode more information in QueryID.
	* src/mcs/QueryID.cpp: Likewise.
	* testsuite/testID.cpp: Adapt testcase.

2012-03-01  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* include/mcs/NewNeighbor.h: Include some basic stuff.

	* include/network/Makefile.am: Add NewOutputThread.h, NewNeighborThread.h.
	* src/network/Makefile.am: Add NewOutputThread.cpp, NewNeighborThread.cpp.

	* include/network/NewOutputThread.h: New file.
	* src/network/NewOutputThread.cpp: Likewise.
	* include/network/NewNeighborThread.h: Likewise.
	* src/network/NewNeighborThread.cpp: Likewise.

	* include/mcs/NewOutputDispatcher.h: Add Ptr type.
	* include/mcs/BackwardMessage.h: Likewise.

2012-02-27  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* testsuite/testAbstractContext.cpp: Fix testcases.

	* src/dmcs/DLVInstantiator.cpp: Init evaluator's mqs from here.
	* src/dmcs/Evaluator.cpp: Let Instantiator initialize mqs.

	* include/mcs/BridgeRuleEvaluator.h: Update heads with k1, k2.
	* src/mcs/BridgeRuleEvaluator.cpp: Likewise.
	* include/mcs/Heads.h: Likewise.